--- a/lesson_5.1/composer.json
+++ b/lesson_5.1/composer.json
@@ -1,27 +1,12 @@
 {
-    "name": "yandex/geo",
-    "type": "library",
-    "description": "PHP-library for interactions with geo-coding Yandex.Maps",
-    "keywords": ["api", "yandex", "geo", "geocode", "geocoder", "maps"],
-    "license": "The MIT License (MIT)",
+    "name": "miklmap/test",
     "authors": [
         {
-            "name": "Dmitry Kuznetsov",
-            "email": "kuznetsov2d@gmail.com",
-            "homepage": "http://kuznetsov.io"
+            "name": "Karpov Mihail",
+            "email": "kmv1712@gmail.com"
         }
     ],
     "require": {
-        "php": ">=5.3.0"
-    },
-    "autoload": {
-        "psr-0": {
-            "Yandex\\Geo": "source/"
-        }
-    },
-    "support": {
-        "source": "https://github.com/yandex-php/php-yandex-geo",
-        "issues": "https://github.com/yandex-php/php-yandex-geo/issues",
-        "wiki": "https://github.com/yandex-php/php-yandex-geo"
+        "yandex/geo": "^1.1"
     }
 }
